Remove Guava dependency, mini refactor, new Slice methods
Also update the license year